--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -12,7 +12,7 @@
     <h1 class="heading"><%= @member.default_name %></h1>
     <% if @member.display_name.present? %>
       <p class="mt-1 text-soft text-sm"><%= @member.username %></p>
-    <% elsif @member == current_user %>
+    <% elsif @member == current_user && 2.weeks.ago <= @member.created_at %>
       <p class="mt-1 text-sm">
         <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'italic text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
       </p>
@@ -20,7 +20,7 @@
 
     <div class="mt-3 text-soft text-sm inline-flex items-center gap-1.5">
       Joined
-      <span class="inline-flex items-center gap-0.5 mr-px whitespace-nowrap font-semibold text-light">
+      <span class="inline-flex items-center gap-1 mr-px whitespace-nowrap font-semibold text-light">
         <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
         <%= pretty_date(@member.created_at, date_style: :absolute, month_format: :short) %>
       </span>
