--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,73 +1,177 @@
 <% content_for :title, @team.name %>
 
-<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-4xl mx-auto my-16">
-  <div class="mb-6 text-center">
-    <div class="mb-4 flex justify-center">
-      <%= render 'shared/team_photo', team: @team, size: :lg %>
+<% if current_user.member_of? @team %>
+  <div data-controller="event-banner" class="mb-16 flex flex-col gap-[3px] items-center mx-auto max-w-screen-sm">
+    <% @team.events.starting_soon.order(start_date: :asc).select { show_event_banner? _1 }.each do |event| %>
+      <%
+        days_until_start = event.days_until_start
+        starting_tomorrow = days_until_start == 1
+
+        cookieExpiresIn = if starting_tomorrow
+                            (event.start_date.beginning_of_day - Time.now).to_i
+                          else
+                            (event.start_date.beginning_of_day - 1.day - Time.now).to_i
+                          end
+
+        banner_bg_color = starting_tomorrow ? 'bg-yellow-200/50 dark:bg-slate-800/40' : 'bg-blue-100/80 dark:bg-slate-800/40'
+        accent_border_color = starting_tomorrow ? 'bg-yellow-500' : 'bg-blue-500'
+        details_link_color = starting_tomorrow ? 'text-yellow-600 dark:text-yellow-500 hover:text-yellow-700/80 dark:hover:text-yellow-600' : 'text-blue-500 hover:text-blue-600'
+        dismiss_button_color = starting_tomorrow ? 'text-yellow-600/90 hover:text-yellow-700/70 dark:hover:text-yellow-400 hover:bg-yellow-300/40 dark:hover:bg-yellow-800/25 focus:ring-yellow-400' : 'text-blue-500 hover:text-blue-600 dark:hover:text-blue-400 hover:bg-blue-200/70 dark:hover:bg-blue-900/50 focus:ring-blue-400'
+      %>
+
+      <div data-event-banner-target="banner" data-event-id="<%= event.id %>" data-cookie-expires-in="<%= cookieExpiresIn %>" class="w-full p-4 pr-2 sm:pr-3 pl-9 rounded-2xl <%= banner_bg_color %>">
+        <div class="relative">
+          <div class="absolute inset-y-0 -left-5 h-full <%= accent_border_color %> rounded-full w-1.5 my-auto mr-1"></div>
+
+          <div class="flex items-center justify-between gap-2">
+            <div class="flex items-center gap-1 text-normal">
+              <div class="leading-tight">
+                <p class="text-sm font-bold"><%= event.title %></p>
+
+                <p class="text-xs text-soft">
+                  Starts <%= starting_tomorrow ? 'tomorrow' : "in #{days_until_start} days" %>.
+                  <%= link_to 'View details', team_calendar_path(@team, tab: 'eventsTab', filter: 'upcoming'), class: "whitespace-nowrap cursor-pointer font-semibold text-xs #{details_link_color} focus:ring-transparent transition duration-200 ease-in-out" %>
+                </p>
+              </div>
+            </div>
+
+            <button type="button" data-action="click->event-banner#dismiss" data-event-id="<%= event.id %>" class="inline-flex items-center justify-center rounded-full p-1.5 <%= dismiss_button_color %>" aria-label="Dismiss">
+              <span class="sr-only">Dismiss</span>
+              <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4.5 shrink-0' %>
+            </button>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% end %>
+
+<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-4xl mx-auto">
+  <div class="mb-6 pb-6 border-b border-slate-200 dark:border-slate-700">
+    <div class="flex max-sm:flex-col max-sm:text-center items-start max-sm:items-center gap-2.5 sm:gap-4 mb-6">
+      <div class="shrink-0 max-sm:mx-auto">
+        <%= render 'shared/team_photo', team: @team, size: :lg %>
+      </div>
+
+      <div class="self-center space-y-1 sm:space-y-1.5">
+        <h1 class="heading"><%= @team.name %></h1>
+
+        <div class="text-soft text-sm flex items-center gap-1.5 max-sm:justify-center">
+          Created
+          <span class="inline-flex items-center gap-1 mr-px whitespace-nowrap font-semibold text-normal">
+            <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
+            <%= pretty_date(@team.created_at, date_style: :absolute, month_format: :short) %>
+          </span>
+        </div>
+
+        <%= simple_format @team.description, class: 'text-soft text-sm text-pretty leading-snug' if @team.description.present? %>
+      </div>
     </div>
 
-    <h1 class="heading"><%= @team.name %></h1>
-    <h2 class="my-1 text-lg text-slate-700 dark:text-slate-400">
-      Coach: <%= link_to @team.owner.default_name, team_member_path(@team, @team.owner), class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
-    </h2>
+    <div class="flex flex-wrap items-center gap-1.5 sm:gap-2 max-sm:justify-center max-sm:text-center">
+      <% if @current_user_member_of_team || @current_user_owns_team %>
+        <div
+          data-controller="modal dropdown"
+          data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+          data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+          data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+          data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+          data-dropdown-hide-dropdown-class="pointer-events-none scale-75 opacity-0"
+          data-dropdown-show-dropdown-class="pointer-events-auto scale-100 opacity-100"
+          data-dropdown-icon-open-class="rotate-180"
+          data-dropdown-dropdown-open-class="shadow-md"
+          class="relative text-sm rounded-md transition duration-200 ease-in-out"
+        >
+          <!-- Team Actions Dropdown Trigger -->
+          <button type="button" data-action="mousedown->dropdown#toggle" class="flex items-center gap-3 py-2 pl-4 pr-3 shadow bg-gray-900 dark:bg-white text-normal-reverse font-normal rounded-md focus:outline-none focus:outline-indigo-500 dark:focus:outline-slate-600">
+            <span>Actions</span>
+            <%= inline_svg_tag 'icons/chevron-down-bold.svg', class: 'size-4 text-normal-reverse transition duration-200 ease-in-out', data: { dropdown_target: 'arrowIcon' } %>
+          </button>
 
-    <%= simple_format @team.description, class: 'text-soft text-sm md:max-w-[80%] md:mx-auto text-pretty' unless @team.description.blank? %>
+          <!-- Team Actions Dropdown Menu -->
+          <div data-dropdown-target="dropdown" class="dropdown-menu origin-top-left top-11 left-0">
+            <%= render 'teams/shared/team_links', team: @team %>
+          </div>
+        </div>
+        <%= render 'teams/shared/delete_team_modal', team: @team if @current_user_owns_team %>
+        <%= render 'teams/shared/leave_team_modal', team: @team if @current_user_member_of_team && !@current_user_owns_team %>
+      <% else %>
+        <%= render 'teams/shared/join_button', team: @team %>
+      <% end %>
 
-    <div class="flex items-center <%= current_user.member_of?(@team) ? 'justify-between' : 'justify-center' %> mt-4">
-      <% if current_user.member_of?(@team) %>
-        <div class="relative">
-          <%= link_to 'Team Chat', team_topics_path(@team), class: 'btn btn-primary btn-muted' %>
+      <% if @current_user_member_of_team %>
+        <div class="relative max-sm:grow">
+          <%= link_to team_topics_path(@team), class: 'btn btn-white btn-muted gap-2 max-sm:w-full' do %>
+            <%= inline_svg_tag 'icons/message-bubble-filled.svg', class: 'size-4 shrink-0' %>
+            <span>Messages</span>
+          <% end %>
 
           <% if current_user.any_unread_messages_for_team?(@team) %>
-            <span class="absolute -top-1 -right-1 grid place-items-center size-3">
+            <span class="absolute -top-[3px] -right-[3px] grid place-items-center size-3">
               <span class="motion-reduce:hidden animate-ping-slow absolute inline-flex size-full rounded-full bg-indigo-400 dark:bg-indigo-500 opacity-60"></span>
               <span class="relative inline-flex rounded-full size-3 bg-indigo-500"></span>
             </span>
           <% end %>
         </div>
+
+        <%= link_to team_calendar_path(@team), class: 'btn btn-white btn-muted gap-2 max-sm:grow' do %>
+          <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-4 shrink-0' %>
+          <span>Calendar</span>
+        <% end %>
+
+        <!-- TODO: ask Dad if he wants this here or would prefer not having it -->
+        <!-- If not, delete the `icons/asterisk-filled.svg` file -->
+        <%= link_to team_calendar_path(@team, tab: 'eventsTab'), class: 'btn btn-white btn-muted gap-2 max-sm:grow' do %>
+          <%= inline_svg_tag 'icons/asterisk-filled.svg', class: 'size-5 shrink-0 -m-0.5 -ml-1' %>
+          <span>Events</span>
+        <% end %>
       <% end %>
+    </div>
 
-      <% if @current_user_member_of_team || @current_user_owns_team %>
-        <div
-          data-controller="modal"
-          data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
-          data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
-          data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
-          data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-          class="relative"
-        >
-          <div
-            data-controller="dropdown"
-            data-dropdown-hide-dropdown-class="pointer-events-none scale-75 opacity-0"
-            data-dropdown-show-dropdown-class="pointer-events-auto scale-100 opacity-100"
-            data-dropdown-icon-open-class="rotate-180"
-            data-dropdown-dropdown-open-class="shadow-md"
-            class="text-sm rounded-md transition duration-200 ease-in-out"
-          >
-            <!-- Team Actions Dropdown Trigger -->
-            <button
-              type="button"
-              data-action="mousedown->dropdown#toggle"
-              class="dropdown-toggle"
-              >
-              <span>Actions</span>
-              <%= inline_svg_tag 'icons/chevron-down.svg', class: 'size-4 text-soft transition duration-200 ease-in-out', data: { dropdown_target: 'arrowIcon' } %>
-            </button>
-
-            <!-- Team Actions Dropdown Menu -->
-            <div
-              data-dropdown-target="dropdown"
-              class="dropdown-menu origin-top-right right-0 top-12"
-            >
-              <%= render 'teams/shared/team_links', team: @team %>
-            </div>
-          </div>
-          <%= render 'teams/shared/delete_team_modal', team: @team if @current_user_owns_team %>
-          <%= render 'teams/shared/leave_team_modal', team: @team if @current_user_member_of_team && !@current_user_owns_team %>
+    <div class="card p-3 mt-6 sm:mt-3 w-full sm:max-w-max max-sm:mx-auto">
+      <div class="flex items-start gap-2.5">
+        <div class="shrink-0">
+          <%= render 'shared/user_photo', user: @team.owner, size: :sm, icon_background: :darker, image_classes: 'sm:hidden' %>
+          <%= render 'shared/user_photo', user: @team.owner, size: :md, icon_background: :darker, image_classes: 'max-sm:hidden' %>
         </div>
-      <% else %>
-        <%= render 'teams/shared/join_button', team: @team %>
-      <% end %>
+
+        <div class="grow self-center">
+          <p class="text-lg font-bold leading-snug transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500">
+            Coach: <%= @team.owner.default_name %>
+            <%= content_tag(:span, '(You)', class: 'text-muted dark:text-soft text-xs') if @team.owner == current_user %>
+          </p>
+
+          <div class="flex flex-wrap items-center gap-1 sm:gap-1.5 mt-1">
+            <% show_phone = @team.owner.show_phone? && @current_user_member_of_team %>
+            <% show_email = @team.owner.show_email? && @current_user_member_of_team %>
+            <% show_either = show_phone || show_email %>
+
+            <%= link_to team_member_path(@team, @team.owner), class: "btn btn-sm btn-dark dark:btn-light gap-1.5 #{'grow' if show_either}" do %>
+              <%= inline_svg_tag 'icons/profile-filled.svg', class: 'size-3.5' %>
+              <span class="whitespace-nowrap">Profile</span>
+            <% end %>
+
+            <% if show_phone %>
+              <%= sms_to @team.owner.phone_number, class: 'btn btn-sm btn-white gap-1.5 grow' do %>
+                <%= inline_svg_tag 'icons/message-bubble-filled.svg', class: 'size-3.5' %>
+                <span>Text</span>
+              <% end %>
+
+              <%= phone_to @team.owner.phone_number, class: 'btn btn-sm btn-white gap-1.5 grow' do %>
+                <%= inline_svg_tag 'icons/phone-filled.svg', class: 'size-3.5' %>
+                <span>Call</span>
+              <% end %>
+            <% end %>
+
+            <% if show_email %>
+              <%= mail_to @team.owner.email, class: 'btn btn-sm btn-white gap-1.5 grow' do %>
+                <%= inline_svg_tag 'icons/envelope-filled.svg', class: 'size-3.5' %>
+                <span>Email</span>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
