--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -104,7 +104,7 @@
             <div class="p-2.5 rounded-lg bg-slate-200/50 dark:bg-slate-700/40 min-w-max max-sm:grow">
               <p class="text-sm text-light whitespace-nowrap">Projected difference</p>
               <p class="text-xl font-bold">
-                <% miles_difference = projected_miles - mileage_goal %>
+                <% miles_difference = (projected_miles - mileage_goal).round(2) %>
                 <span class="<%= miles_difference.negative? ? 'text-rose-500' : 'text-emerald-500' %>">
                   <%= miles_difference.positive? ? "+#{miles_difference}" : miles_difference %>
                   <span class="text-xs font-normal"><%= 'mile'.pluralize(miles_difference) %></span>
@@ -207,7 +207,7 @@
             <div class="p-2.5 rounded-lg bg-slate-200/50 dark:bg-slate-700/40 min-w-max max-sm:grow">
               <p class="text-sm text-light whitespace-nowrap">Projected difference</p>
               <p class="text-xl font-bold">
-                <% long_runs_difference = projected_long_runs - long_run_goal %>
+                <% long_runs_difference = (projected_long_runs - long_run_goal).round(2) %>
                 <span class="<%= long_runs_difference.negative? ? 'text-rose-500' : 'text-emerald-500' %>">
                   <%= long_runs_difference.positive? ? "+#{long_runs_difference}" : long_runs_difference %>
                   <span class="text-xs font-normal"><%= 'long run'.pluralize(long_runs_difference) %></span>
