style(events): make event title bold in delete event modal

--- a/app/views/teams/calendar/_event_actions_dropdown.html.erb
+++ b/app/views/teams/calendar/_event_actions_dropdown.html.erb
@@ -85,7 +85,7 @@
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left">
     <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Event?</h2>
-    <p class="text-soft text-sm">Are you sure you want to delete the event <%= event.title %>? This action cannot be undone.</p>
+    <p class="text-soft text-sm">Are you sure you want to delete the event <span class="font-bold"><%= event.title %></span>? This action cannot be undone.</p>
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
