--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: team, data: { controller: "form-validation" }, html: { novalidate: true } do |form| %>
+<%= form_with model: team, data: { controller: 'form-validation' }, html: { novalidate: true } do |form| %>
   <%= render 'shared/error_messages', resource: team %>
 
   <div class="my-6">
@@ -64,7 +64,7 @@
 
     <div class="relative">
       <%= inline_svg_tag 'icons/calendar.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-      <%= form.date_field :season_start_date, value: form.object.new_record? ? nil : team.season_start_date, class: 'form-input pl-10', data: { form_validation_target: "seasonStartDate", action: "input->form-validation#validateSeasonEndDate" } %>
+      <%= form.date_field :season_start_date, value: form.object.new_record? ? nil : team.season_start_date, class: 'form-input pl-10', data: { form_validation_target: 'seasonStartDate', action: 'input->form-validation#validateSeasonEndDate' } %>
     </div>
   </div>
 
